--- a/index.html
+++ b/index.html
@@ -9,17 +9,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
-<body>
+<body bgcolor="#E5E4E2">
     <div class="page-wrapper">
         <div class="side1">
-        <div class="wrapper">
-        <h1>Data Analyst</h1>
+        <div class="wrapper1">
         <img class="profile-pic" src="portfolioimg.jpg">
-        <h2>Sanjana Mahesh</h2>
-        <p>Connect : 
-            <a href ="#">LinkedIn</a>
-            <a href ="#">GitHub</a>
-        </p>
+        <h1 class="name">Sanjana Mahesh</h1>
+            <a href ="https://www.linkedin.com/in/sanjana-mahesh-278100203/" class="linkedin">LinkedIn</a>
+            <a href ="https://github.com/SanjanaMahesh3" class="linkedin1">GitHub</a>
+            <a href ="mailto: sanjanamahesh2002@gmail.com" class="linkedin2">Email</a>
         </div>
         <div class="wrapper">
             <h1>Experience</h1>
@@ -38,7 +36,11 @@
         <div class="side2">
             <div class="wrapper">
                 <h1>About Me</h1>
-                <p>Need to fill this</p>
+                <p>Hey! I’m Sanjana, a passionate data enthusiast currently working as a Data Analyst in the R&D department at Schneider Electric in Bangalore, India. I recently earned my Bachelor’s in Computer Science Engineering with a specialization in Machine Intelligence and Data Science (MIDS) from PES University, Bangalore.</p>
+
+                 <p>   I have a strong inclination towards research and have gained valuable experience in it. During one of my summer breaks, I worked as a research assistant at the IoT Center, contributing to a project titled “An Assistive Device for the Visually Impaired.” Earlier this year, I interned at Schneider Electric as a Data Analyst, further enhancing my skills.</p>
+                    
+                  <p>  With a GPA of 8.78 and a deep commitment to learning and excellence, I’m a detail-oriented professional with a versatile skill set in Data Analysis and Full Stack Development. My passion for data drives me to excel in fast-paced environments and deliver meaningful results. I’m excited to contribute to cutting-edge projects!</p>
             </div>
             <div class="wrapper">
                 <h1>Projects</h1>
