--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="bio">
             <h2>About Me</h2>
-            <p>Hello! I am Sanjana, a data enthusiast. I am currently working as a Data Analyst in the R&D department at Schneider Electric, Bangalore, India. I recently graduated in bachelors in Computer Science engineering with a specialisation in MIDS(Machine Intelligence and Data Science) from PES University, Bangalore, India. </p>
+            <p>Hello! I am Sanjana, a data enthusiast. I am currently working as a Software developer in the R&D department at Schneider Electric, Bangalore, India. I recently graduated in bachelors in Computer Science engineering with a specialisation in MIDS(Machine Intelligence and Data Science) from PES University, Bangalore, India. </p>
             <p>I am very research oriented with significant experience in it. In one of the summer breaks I was a research assistant in the centre of IoT working on the project, “An assistive device for the visually impaired”. This spring I interned with Schneider Electric as a data analyst.</p>
             <p>With an 8.78 GPA and a strong dedication to continuous learning and excellence, I am a driven and detail-oriented professional. My diverse skills in Data Analysis and Full Stack Development enable me to excel in dynamic environments and deliver impactful results. Passionate about data and everything related to it, I am eager to contribute to innovative projects.</p>
         </br>
